Create ImageList component && Edit UI

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -140,8 +140,7 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-  // width: 15px;
-  width: fit-content;
+  width: 5px;
   height: auto;
   background: transparent;
 }
